Made SeriesListR menu glyph wider
This was done with CSS on the span element containing the menu glyph.

--- a/static/css/bootstrap.css
+++ b/static/css/bootstrap.css
@@ -7030,3 +7030,7 @@ tr .dropdown-toggle {
 tr:hover .dropdown-toggle {
   color: black;
 }
+span#dropdownSeries {
+  padding-left: 1em;
+  padding-right: 1em;
+}
